--- a/easymessage/WebContent/pages/js/template/push_msg_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_list_template.html
@@ -146,6 +146,7 @@
 											<th>반복시간</th>
 											<th>반복횟수</th>
 											<th>내용</th>
+											<th>발송형태</th>
 											<th></th>
 											<!-- 											<th>반복횟수</th> -->
 											<!-- 											<th>반복시간</th> -->
