--- a/easymessage/WebContent/pages/js/template/push_login_template.html
+++ b/easymessage/WebContent/pages/js/template/push_login_template.html
@@ -57,6 +57,11 @@
 
 		</div>
 	</div>
+	<div class="navbar navbar-default navbar-fixed-bottom">
+		<div class="alert alert-info" style="text-align: center;">&nbsp;
+			&nbsp; &nbsp; &nbsp; 이 페이지는 Chrome 에 최적화 되어있으며, Internet Explorer 10
+			이상,Safari 6 이상, Firefox를 지원합니다.</div>
+	</div>
 	<!-- /.col -->
 </div>
 <!-- /.row -->
