--- a/easymessage/WebContent/pages/js/template/push_msg_send_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_send_template.html
@@ -168,7 +168,8 @@
 									</div>
 									<div>
 										<i class="ace-icon fa fa-caret-right blue"></i> <label>파일
-											첨부</label>
+											첨부</label> <br><span
+											style="font-size: x-small; font-weight: lighter;">(파일 첨부시 mms 메시지로 전환되어 전송 됩니다!)</span>
 										<!-- #section:custom/file-input -->
 
 										<form id="private-image-upload-form" method="post"
@@ -307,7 +308,8 @@
 									</div>
 									<div>
 										<i class="ace-icon fa fa-caret-right blue"></i> <label>파일
-											첨부</label>
+											첨부</label><br><span
+											style="font-size: x-small; font-weight: lighter;">(파일 첨부시 mms 메시지로 전환되어 전송 됩니다!)</span>
 										<!-- #section:custom/file-input -->
 
 										<form id="contact-image-upload-form" method="post"
@@ -463,7 +465,8 @@
 									</div>
 									<div>
 										<i class="ace-icon fa fa-caret-right blue"></i> <label>파일
-											첨부</label>
+											첨부</label><br><span
+											style="font-size: x-small; font-weight: lighter;">(파일 첨부시 mms 메시지로 전환되어 전송 됩니다!)</span>
 										<!-- #section:custom/file-input -->
 
 										<form id="group-image-upload-form" method="post"
@@ -681,24 +684,24 @@
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>이름
 														</label><br> <input type="text" class="form-control"
-															id="contact-add-user-name-input"></input>
+															id="contact-add-user-name-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목1
 														</label><br> <span
 															style="font-size: x-small; font-weight: bold;">(항목이
 															필요하면 등록해주세요!)</span> <input type="text" class="form-control"
-															id="contact-add-user-item1-input"></input>
+															id="contact-add-user-item1-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목2
 														</label><br> <input type="text" class="form-control"
-															id="contact-add-user-item2-input"></input>
+															id="contact-add-user-item2-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목3
 														</label><br> <input type="text" class="form-control"
-															id="contact-add-user-item3-input"></input>
+															id="contact-add-user-item3-input" maxlength="10"></input>
 													</div>
 
 												</div>
@@ -752,24 +755,24 @@
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>이름
 														</label><br> <input type="text" class="form-control"
-															id="contact-edit-user-name-input"></input>
+															id="contact-edit-user-name-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목1
 														</label><br> <span
 															style="font-size: x-small; font-weight: bold;">(항목이
 															필요하면 등록해주세요!)</span> <input type="text" class="form-control"
-															id="contact-edit-user-item1-input"></input>
+															id="contact-edit-user-item1-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목2
 														</label><br> <input type="text" class="form-control"
-															id="contact-edit-user-item2-input"></input>
+															id="contact-edit-user-item2-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목3
 														</label><br> <input type="text" class="form-control"
-															id="contact-edit-user-item3-input"></input>
+															id="contact-edit-user-item3-input" maxlength="10"></input>
 													</div>
 
 												</div>
