재전송 그룹 메시지 추가

--- a/easymessage/WebContent/pages/js/template/push_msg_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_list_template.html
@@ -285,6 +285,7 @@
 
 																</p>
 															</div>
+															<input type="hidden" id="resend-group-check">
 														</div>
 													</div>
 
