--- a/easymessage/WebContent/pages/js/template/push_user_info_template.html
+++ b/easymessage/WebContent/pages/js/template/push_user_info_template.html
@@ -79,7 +79,7 @@
 							<div class="col-sm-9">
 								<input type="text" id="user-info-sendnum-input"
 									placeholder="발송 번호 " class="col-xs-10 col-sm-5"
-									disabled="disabled">
+									disabled="disabled" maxlength="14">
 							</div>
 						</div>
 							<div class="space-8"></div>
@@ -88,12 +88,12 @@
 								<button class="btn btn-info" id="user-info-modify-btn"
 									type="button">
 
-									<i class="ace-icon fa fa-pencil-square-o bigger-110"></i> 정보 수정
+									<i class="ace-icon fa fa-pencil-square-o bigger-110"></i> 편집
 								</button>
 
 								&nbsp; &nbsp;
 								<button class="btn" id="user-info-confirm-btn" type="button">
-									<i class="ace-icon fa fa-check bigger-110"></i> 확인
+									<i class="ace-icon fa fa-check bigger-110"></i> 수정
 								</button>
 							</div>
 						</div>
