추가 요구사항 반영

--- a/easymessage/WebContent/pages/js/template/push_user_info_template.html
+++ b/easymessage/WebContent/pages/js/template/push_user_info_template.html
@@ -8,13 +8,13 @@
 </div>
 <!--breadcrumbs -->
 <div class="page-content">
-	<div class="page-header">
-		<h1>
-			사용자 정보 <small> <i class="ace-icon fa fa-angle-double-right"></i>
-				사용자 정보 수정 및 확인
-			</small>
-		</h1>
-	</div>
+<!-- 	<div class="page-header"> -->
+<!-- 		<h1> -->
+<!-- 			사용자 정보 <small> <i class="ace-icon fa fa-angle-double-right"></i> -->
+<!-- 				사용자 정보 수정 및 확인 -->
+<!-- 			</small> -->
+<!-- 		</h1> -->
+<!-- 	</div> -->
 	<!-- /.page-header -->
 		<div class="row">
 		<div class="col-xs-12">
@@ -93,7 +93,7 @@
 
 								&nbsp; &nbsp;
 								<button class="btn" id="user-info-confirm-btn" type="button">
-									<i class="ace-icon fa fa-check bigger-110"></i> 수정
+									<i class="ace-icon fa fa-check bigger-110"></i> 확인
 								</button>
 							</div>
 						</div>
