--- a/easymessage/WebContent/pages/js/template/push_msg_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_list_template.html
@@ -8,13 +8,13 @@
 </div>
 <!--breadcrumbs -->
 <div class="page-content">
-	<div class="page-header">
-		<h1>
-			메시지 발송 현황 <small> <i
-				class="ace-icon fa fa-angle-double-right"></i> 메시지 발송 결과 확인 및 재전송
-			</small>
-		</h1>
-	</div>
+	<!-- 	<div class="page-header"> -->
+	<!-- 		<h1> -->
+	<!-- 			메시지 발송 현황 <small> <i -->
+	<!-- 				class="ace-icon fa fa-angle-double-right"></i> 메시지 발송 결과 확인 및 재전송 -->
+	<!-- 			</small> -->
+	<!-- 		</h1> -->
+	<!-- 	</div> -->
 	<!-- /.page-header -->
 
 	<div class="row">
@@ -35,58 +35,75 @@
 				</div>
 				<div class="widget-body">
 					<div class="widget-main">
-						<div class="form-group">
-							<label>검색 월 선택</label>
+
+						<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+							<label class="col-lg-1 col-sm-3 col-xs-3">월선택 </label>
 							<div id="msg-list-date-time-picker-div"
-								class="input-group col-lg-12">
+								class="input-group  col-lg-11  col-sm-9 col-xs-9">
 								<input id="msg-list-month-date-input" type="text"
 									class="form-control" disabled="disabled"> <span
 									class="input-group-addon"> <i
 									class="fa fa-clock-o bigger-110"></i>
 								</span>
 							</div>
-							<br>
-							<div class="clearfix"></div>
-							<br> <label>검색 시작 일 선택</label>
+						</div>
+						<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+							<label class="col-lg-1 col-sm-3 col-xs-3">시작일 </label>
 							<div id="msg-list-start-date-time-picker-div"
-								class="input-group col-lg-12">
+								class="input-group col-lg-11  col-sm-9 col-xs-9">
 								<input id="msg-list-start-date-input" type="text"
 									class="form-control" disabled="disabled"> <span
 									class="input-group-addon"> <i
 									class="fa fa-clock-o bigger-110"></i>
 								</span>
 							</div>
-							<div class="clearfix"></div>
-							<br> <label>검색 종료 일 선택</label>
+						</div>
+						<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+							<label class="col-lg-1 col-sm-3 col-xs-3"> 종료일 </label>
 							<div id="msg-list-end-date-time-picker-div"
-								class="input-group col-lg-12">
+								class="input-group col-lg-11  col-sm-9 col-xs-9">
 								<input id="msg-list-end-date-input" type="text"
 									class="form-control" disabled="disabled"> <span
 									class="input-group-addon"> <i
 									class="fa fa-clock-o bigger-110"></i>
 								</span>
 							</div>
+						</div>
 
-							<div class="clearfix"></div>
-							<br> <label>검색 항목</label> <select class="form-control"
-								id="msg-list-search-select">
-								<option value="0">선택</option>
-								<option value="1">발송상태</option>
-								<option value="2">수신번호</option>
+						<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+							<label class="col-lg-1 col-sm-3 col-xs-3"> 검색항목</label>
+							<div class="input-group col-lg-11  col-sm-9 col-xs-9">
+								<select class="form-control" id="msg-list-search-select">
+									<option value="0">선택</option>
+									<option value="1">발송상태</option>
+									<option value="2">수신번호</option>
 
 
-							</select>
-							<div class="clearfix"></div>
-							<br>
-							<div id="msg-list-search-content-div" style="display: none;">
-								<label>수신 번호</label> <input id="msg-list-search-input"
-									type="text" class="form-control" disabled="disabled">
-								<div class="clearfix"></div>
+								</select>
 							</div>
 
-							<div id="msg-list-send-status-div" style="display: none;">
-								<label>발송상태 선택</label><select class="form-control"
-									id="msg-list-search-status-select">
+
+
+						</div>
+
+
+						<div id="msg-list-search-content-div"
+							class="form-group col-lg-12 col-sm-12 col-xs-12"
+							style="display: none;">
+							<label class="col-lg-1 col-sm-3 col-xs-3">수신 번호</label>
+							<div class="col-lg-11  col-sm-9 col-xs-9 input-group">
+								<input id="msg-list-search-input" type="text"
+									class="form-control" disabled="disabled">
+							</div>
+
+						</div>
+
+						<div id="msg-list-send-status-div"
+							class="form-group col-lg-12 col-sm-12 col-xs-12"
+							style="display: none;">
+							<label class="col-lg-1 col-sm-3 col-xs-3">발송상태</label>
+							<div class="col-lg-11  col-sm-9 col-xs-9 input-group">
+								<select class="form-control" id="msg-list-search-status-select">
 									<option value="-99">발송오류</option>
 									<option value="-2">수신자없음</option>
 									<option value="0">발송중</option>
@@ -94,231 +111,246 @@
 									<option value="2">예약취소됨</option>
 								</select>
 							</div>
-
-							<!-- 							<div class="clearfix"></div> -->
-
-							<!-- 							<div id="msg-list-ack-status-div" style="display: none;"> -->
-							<!-- 								<label>응답상태 선택</label> <select class="form-control" -->
-							<!-- 									id="msg-list-search-ack-select"> -->
-							<!-- 									<option value="0">응답없음</option> -->
-							<!-- 									<option value="1">수신확인</option> -->
-							<!-- 									<option value="2">메시지확인</option> -->
-
-							<!-- 								</select> -->
-							<!-- 							</div> -->
 						</div>
-						<div class="form-group">
-							<div class="clearfix"></div>
 
-							<button class="btn btn-info" id="msg-list-search-btn"
-								type="button">
+						<div class="form-group  col-lg-12 col-sm-12 col-xs-12">
+							<button class="btn btn-sm btn-info pull-right"
+								id="msg-list-search-btn" type="button">
 
-								<i class="ace-icon fa fa-search bigger-110"></i> 검색
+								<span class="ace-icon fa fa-search icon-on-right bigger-110"></span>
+								검색
 							</button>
-
-							<!-- 							&nbsp; &nbsp; -->
-							<!-- 							<button class="btn" id="msg-list-reset-btn" type="button"> -->
-							<!-- 								<i class="ace-icon fa fa-refresh bigger-110"></i> 재설정 -->
-							<!-- 							</button> -->
 						</div>
 
 
-						<div class="row">
-							<div class="col-lg-12">
 
 
-								<div class="clearfix">
-									<div class="pull-right tableTools-container"></div>
-								</div>
-								<div class="table-header">발송 메시지 목록</div>
 
-								<!-- div.table-responsive -->
 
-								<!-- div.dataTables_borderWrap -->
 
-								<table id="msg-list-table"
-									class="table table-striped  table-hover" width="100%">
-									<thead>
-										<tr>
-											<th>발송시간</th>
-											<th>수신번호</th>
-											<th>발송상태</th>
-											<th>반복시간</th>
-											<th>반복횟수</th>
-											<th>내용</th>
-											<th>발송형태</th>
-											<th></th>
-											<!-- 											<th>반복횟수</th> -->
-											<!-- 											<th>반복시간</th> -->
-											<!-- 											<th>메시지내용</th> -->
-										</tr>
-									</thead>
+						<!-- 							<div class="clearfix"></div> -->
 
-									<tbody>
+						<!-- 							<div id="msg-list-ack-status-div" style="display: none;"> -->
+						<!-- 								<label>응답상태 선택</label> <select class="form-control" -->
+						<!-- 									id="msg-list-search-ack-select"> -->
+						<!-- 									<option value="0">응답없음</option> -->
+						<!-- 									<option value="1">수신확인</option> -->
+						<!-- 									<option value="2">메시지확인</option> -->
 
-									</tbody>
-								</table>
-								<div class="form-group" id="msg-list-csv-div">
-									<input type="hidden" id="msg-list-excel-cnt">
-									<div class="clearfix"></div>
-									<br>
-									<button class="btn btn-info" id="msg-list-csv-btn"
-										type="button">
+						<!-- 								</select> -->
+						<!-- 							</div> -->
+					</div>
 
-										<i class="ace-icon fa fa-file-excel-o bigger-110"></i> csv 파일로
-										다운로드
-									</button>
 
-								</div>
+
+					<div class="row" style="margin-left: 12px; margin-right: 12px;">
+						<div class="col-lg-12">
+
+
+							<div class="clearfix">
+								<div class="pull-right tableTools-container"></div>
 							</div>
-						</div>
+							<!-- 	<div class="table-header">발송 메시지 목록</div> -->
 
+							<!-- div.table-responsive -->
 
-						<div id="msg-list-detail-div" class="row" width="100%"
-							style="display: none;">
-							<div class="col-lg-12">
+							<!-- div.dataTables_borderWrap -->
 
+							<table id="msg-list-table"
+								class="table table-striped  table-hover" width="100%">
+								<thead>
+									<tr>
+										<th>발송시간</th>
+										<th>수신번호</th>
+										<th>발송상태</th>
+										<th>반복시간</th>
+										<th>반복횟수</th>
+										<th>내용</th>
+										<th>발송형태</th>
+										<th></th>
+										<!-- 											<th>반복횟수</th> -->
+										<!-- 											<th>반복시간</th> -->
+										<!-- 											<th>메시지내용</th> -->
+									</tr>
+								</thead>
 
-								<div class="clearfix">
-									<div class="pull-right tableTools-container"></div>
-								</div>
-								<div class="table-header">상세 내용</div>
+								<tbody>
 
-
-								<!-- div.table-responsive -->
-
-								<!-- div.dataTables_borderWrap -->
-
-								<table id="msg-list-detail-table"
-									class="table table-striped  table-hover" width="100%;">
-									<thead>
-										<tr>
-											<th>수신번호</th>
-											<th>수신확인</th>
-											<th>수신확인시간</th>
-											<th>메시지확인</th>
-											<th>메시지확인시간</th>
-
-										</tr>
-									</thead>
-
-									<tbody width="100%">
-
-									</tbody>
-								</table>
-								<button class="btn btn-info" id="msg-list-detail-confirm-btn"
+								</tbody>
+							</table>
+							<div class="form-group" id="msg-list-csv-div">
+								<input type="hidden" id="msg-list-excel-cnt">
+								<div class="clearfix"></div>
+								<br>
+								<button class="btn btn-sm btn-info" id="msg-list-csv-btn"
 									type="button">
 
-									<i class="ace-icon fa fa-check bigger-110"></i>확인
-
+									<i class="ace-icon fa fa-file-excel-o bigger-110"></i> csv 파일로
+									다운로드
 								</button>
 
 							</div>
 						</div>
-
-						<div id="msg-resend-modal" class="modal fade" tabindex="-1">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-									
-										<h4 class="blue bigger">메시지 재전송</h4>
-									</div>
-									<div class="modal-body">
-										<div class="row">
-											<div class="col-lg-12">
-												<div class="widget-box ui-sortable-handle">
-													<div class="widget-header">
-														<h5 class="widget-title">무전번호 입력</h5>
-													</div>
-													<div class="widget-body">
-														<div class="widget-main">
-															<div class="form-group">
-																<i class="ace-icon fa fa-caret-right blue"></i><label>Ptalk
-																	유형 선택 : </label> <label>Ptalk1.0</label> <input type="radio"
-																	name="resend-pnum-radio" id="resend-pnum-p1-radio"
-																	value="82" checked="checked"> &nbsp;<label>Ptalk2.0</label>
-																<input type="radio" name="resend-pnum-radio"
-																	id="resend-pnum-p2-radio" value="1">
-															</div>
-
-															<div class="form-group">
-																<i class="ace-icon fa fa-caret-right blue"></i> <label>fleet/확장
-																	번호</label><br> <span
-																	style="font-size: x-small; font-weight: bold;">(Ptalk1.0은
-																	fleet번호, Ptalk2.0은 확장번호를 입력해 주세요.)</span> <input type="text"
-																	class="form-control" id="resend-fleep-bunch-input"
-																	maxlength="6">
-															</div>
-
-															<div class="form-group">
-																<i class="ace-icon fa fa-caret-right blue"></i> <label>개별
-																	번호 </label><br> <span
-																	style="font-size: x-small; font-weight: bold;">(개별
-																	번호를 입력한 후 플러스(+)버튼을 누르세요!)</span>
-																<div class="input-group">
-																	<input maxlength="6" type="text" class="form-control"
-																		id="resend-private-input" placeholder=""> <span
-																		style="cursor: pointer;" id="msg-resend-plus-span"
-																		class="input-group-addon"><span
-																		class="glyphicon glyphicon-plus"></span> </span>
-																</div>
-															</div>
-															<div class="form-group"
-																id="msg-resend-user-target-show-div"
-																style="display: none;">
-																<i class="ace-icon fa fa-caret-right blue"></i> <label>수신
-																	무전번호 목록 </label><br>
-																<textarea class="form-control"
-																	id="msg-resend-user-target-show-input"
-																	disabled="disabled"></textarea>
-
-															</div>
-															<i class="ace-icon fa fa-caret-right blue"></i> <label
-																class="text-primary">내용</label>
-															<div class="form-group">
-																<textarea rows="9" class="form-control"
-																	id="msg-resend-content-textarea" placeholder="내용 입력"></textarea>
-																<p id="msg-resend-length-p">
-																	<strong id="msg-resend-length-strong">0</strong>/<span
-																		id="msg-resend-length-max">140</span><span
-																		id="msg-resend-length-byte">byte</span>
-
-																</p>
-															</div>
-															<input type="hidden" id="resend-group-check">
-														</div>
-													</div>
+					</div>
 
 
-												</div>
+					<div id="msg-list-detail-div" class="row" width="100%"
+						style="display: none; margin-left: 12px; margin-right: 12px;">
+						<div class="col-lg-12">
 
-											</div>
 
-
-										</div>
-										<div class="modal-footer">
-											<button class="btn btn-sm" id="modal-footer-cancel"
-												data-dismiss="modal">
-												<i class="ace-icon fa fa-times"></i> 취소
-											</button>
-
-											<button id="msg-resend-btn" class="btn btn-sm btn-primary">
-												<i class="ace-icon fa fa-check"></i> 메시지 전송
-											</button>
-										</div>
-									</div>
-								</div>
+							<div class="clearfix">
+								<div class="pull-right tableTools-container"></div>
 							</div>
+							<div class="table-header">상세 내용</div>
+
+
+							<!-- div.table-responsive -->
+
+							<!-- div.dataTables_borderWrap -->
+
+							<table id="msg-list-detail-table"
+								class="table table-striped  table-hover" width="100%;">
+								<thead>
+									<tr>
+										<th>수신번호</th>
+										<th>수신확인</th>
+										<th>수신확인시간</th>
+										<th>메시지확인</th>
+										<th>메시지확인시간</th>
+
+									</tr>
+								</thead>
+
+								<tbody width="100%">
+
+								</tbody>
+							</table>
+							<button class="btn btn-sm btn-info"
+								id="msg-list-detail-confirm-btn" type="button">
+
+								<i class="ace-icon fa fa-check bigger-110"></i>확인
+
+							</button>
 
 						</div>
 					</div>
 
+					<div id="msg-resend-modal" class="modal fade" tabindex="-1">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
 
+									<h4 class="blue bigger">메시지 재전송</h4>
+								</div>
+								<div class="modal-body">
+									<div class="row">
+										<div class="col-lg-12">
+											<div class="widget-box ui-sortable-handle">
+												<div class="widget-header">
+													<h5 class="widget-title">무전번호 입력</h5>
+												</div>
+												<div class="widget-body">
+													<div class="widget-main">
+														<div class="form-group">
+															<i class="ace-icon fa fa-caret-right blue"></i> <label>개인/그룹
+																선택 : </label> <label>개인</label> <input type="radio"
+																name="resend-check-radio"
+																id="resend-check-radio-private" value="0"
+																checked="checked"> &nbsp;<label>그룹</label> <input
+																type="radio" name="resend-check-radio"
+																id="resend-check-radio-group" value="1">
+														</div>
+														<div class="form-group">
+															<i class="ace-icon fa fa-caret-right blue"></i><label>Ptalk
+																유형 선택 : </label> <label>Ptalk1.0</label> <input type="radio"
+																name="resend-pnum-radio" id="resend-pnum-p1-radio"
+																value="82" checked="checked"> &nbsp;<label>Ptalk2.0</label>
+															<input type="radio" name="resend-pnum-radio"
+																id="resend-pnum-p2-radio" value="1">
+														</div>
+
+														<div class="form-group">
+															<i class="ace-icon fa fa-caret-right blue"></i> <label id="resend-fleet-label">fleet
+																번호</label><br> <span id="resend-fleet-span"
+																style="font-size: x-small; font-weight: bold;">(무전번호의
+																fleet번호를 입력해주세요!)</span> <input type="text"
+																class="form-control" id="resend-fleep-bunch-input"
+																maxlength="6">
+														</div>
+
+														<div class="form-group">
+															<i class="ace-icon fa fa-caret-right blue"></i> <label id="resend-private-label">개별
+																번호 </label><br> <span id="resend-private-span"
+																style="font-size: x-small; font-weight: bold;">(무전번호의
+																개별 ID를 입력해주세요!)</span>
+															<div class="input-group">
+																<input maxlength="6" type="text" class="form-control"
+																	id="resend-private-input" placeholder=""> <span
+																	style="cursor: pointer;" id="msg-resend-plus-span"
+																	class="input-group-addon"><span
+																	class="glyphicon glyphicon-plus"></span> </span> <span
+																	style="cursor: pointer;" id="msg-resend-minus-span"
+																	class="input-group-addon"><span
+																	class="glyphicon glyphicon-minus"></span> </span>
+															</div>
+														</div>
+														<div class="form-group"
+															id="msg-resend-user-target-show-div"
+															style="display: none;">
+															<i class="ace-icon fa fa-caret-right blue"></i> <label>수신
+																무전번호 목록 </label><br>
+															<textarea class="form-control"
+																id="msg-resend-user-target-show-input"
+																disabled="disabled"></textarea>
+
+														</div>
+														<i class="ace-icon fa fa-caret-right blue"></i> <label
+															class="text-primary">내용</label>
+														<div class="form-group">
+															<textarea rows="9" class="form-control"
+																id="msg-resend-content-textarea" placeholder="내용 입력"></textarea>
+															<p id="msg-resend-length-p">
+																<strong id="msg-resend-length-strong">0</strong>/<span
+																	id="msg-resend-length-max">140</span><span
+																	id="msg-resend-length-byte">byte</span>
+
+															</p>
+														</div>
+														<input type="hidden" id="resend-group-check">
+													</div>
+												</div>
+
+
+											</div>
+
+										</div>
+
+
+									</div>
+									<div class="modal-footer">
+										<button class="btn btn-sm" id="modal-footer-cancel"
+											data-dismiss="modal">
+											<i class="ace-icon fa fa-times"></i> 취소
+										</button>
+
+										<button id="msg-resend-btn" class="btn btn-sm btn-primary">
+											<i class="ace-icon fa fa-check"></i> 메시지 전송
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
 				</div>
-			</div>
 
-			<!--row-->
+
+			</div>
 		</div>
+
+		<!--row-->
 	</div>
+</div>
 </div>
 <!--page Content-->
