--- a/easymessage/WebContent/pages/js/template/push_reservation_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_reservation_list_template.html
@@ -8,13 +8,13 @@
 </div>
 <!--breadcrumbs -->
 <div class="page-content">
-	<div class="page-header">
-		<h1>
-			예약 <small> <i class="ace-icon fa fa-angle-double-right"></i>
-				예약 메시지 조회 및 관리
-			</small>
-		</h1>
-	</div>
+	<!-- 	<div class="page-header"> -->
+	<!-- 		<h1> -->
+	<!-- 			예약 <small> <i class="ace-icon fa fa-angle-double-right"></i> -->
+	<!-- 				예약 메시지 조회 및 관리 -->
+	<!-- 			</small> -->
+	<!-- 		</h1> -->
+	<!-- 	</div> -->
 	<!-- /.page-header -->
 
 	<div class="row">
@@ -25,46 +25,62 @@
 				</div>
 				<div class="widget-body">
 					<div class="widget-main">
-						<div class="form-group">
-							<label>검색 월 선택</label>
-							<div id="reservation-date-time-picker"
-								class="input-group col-lg-12">
-								<input id="reservation-date-input" type="text"
-									class="form-control" disabled="disabled"> <span
-									class="input-group-addon"> <i
-									class="fa fa-clock-o bigger-110"></i>
-								</span>
+						<form>
+							<!-- 							<div id="msg-list-send-status-div" class="form-group col-lg-12 col-sm-12 col-xs-12" -->
+							<!-- 							style="display: none;"> -->
+							<!-- 							<label class="col-lg-1 col-sm-3 col-xs-3">발송상태</label> -->
+							<!-- 							<div class="col-lg-11  col-sm-9 col-xs-9 input-group"> -->
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+								<label class="col-lg-1 col-sm-3 col-xs-3">월 선택</label>
+								<div id="reservation-date-time-picker"
+									class="input-group col-lg-11  col-sm-9 col-xs-9">
+									<input id="reservation-date-input" type="text"
+										class="form-control" disabled="disabled"> <span
+										class="input-group-addon"> <i
+										class="fa fa-clock-o bigger-110"></i>
+									</span>
+								</div>
 							</div>
-							<br>
-							<div class="clearfix"></div>
-							<br> <label>검색 항목</label> <select class="form-control"
-								id="reservation-search-select">
-								<option value="0">선택</option>
-								<option value="1">수신번호</option>
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
 
-							</select>
-							<div class="clearfix"></div>
-							<br> <label>검색 내용</label> <input
-								id="reservation-search-input" type="text" class="form-control"
-								disabled="disabled">
+								<label class="col-lg-1 col-sm-3 col-xs-3">검색 항목</label>
+								<div class="input-group col-lg-11  col-sm-9 col-xs-9">
+									<select class="form-control" id="reservation-search-select">
+										<option value="0">선택</option>
+										<option value="1">수신번호</option>
 
-						</div>
-						<div class="form-group">
-							<div class="clearfix"></div>
-							<br>
-							<button class="btn btn-info" id="reservation-search-btn"
-								type="button">
+									</select>
+								</div>
+							</div>
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+								<label class="col-lg-1 col-sm-3 col-xs-3">검색 내용</label>
+								<div class="input-group col-lg-11  col-sm-9 col-xs-9">
+									<input id="reservation-search-input" type="text"
+										class="form-control" disabled="disabled">
+								</div>
 
-								<i class="ace-icon fa fa-search bigger-110"></i> 검색
-							</button>
-
-							&nbsp; &nbsp;
-							<button class="btn" id="reservation-reset-btn" type="button">
-								<i class="ace-icon fa fa-refresh bigger-110"></i> 재설정
-							</button>
-						</div>
+							</div>
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
 
 
+								<button class="btn btn-sm btn-info pull-right" id="reservation-search-btn"
+									type="button">
+
+									<span class="ace-icon fa fa-search icon-on-right bigger-110"></span>
+									검색
+								</button>
+
+							</div>
+							<!-- 							<div class="form-group col-lg-1" style="margin-top: 27px"> -->
+							<!-- 								<button class="btn btn-sm btn-info" id="reservation-search-btn" -->
+							<!-- 									type="button"> -->
+
+							<!-- 									<i class="ace-icon fa fa-search bigger-110"></i> 검색 -->
+							<!-- 								</button> -->
+							<!-- 							</div> -->
+
+
+						</form>
 						<div class="row">
 							<div class="col-lg-12">
 
@@ -72,7 +88,7 @@
 								<div class="clearfix">
 									<div class="pull-right tableTools-container"></div>
 								</div>
-								<div class="table-header">예약 메시지 목록</div>
+
 
 								<!-- div.table-responsive -->
 
@@ -99,7 +115,7 @@
 								<div class="form-group" id="reservation-cancel-div">
 									<div class="clearfix"></div>
 									<br>
-									<button class="btn btn-info" id="reservation-cancel-btn"
+									<button class="btn btn-sm btn-info" id="reservation-cancel-btn"
 										type="button">
 
 										<i class="ace-icon fa fa-times bigger-110"></i> 예약 메시지 취소
