--- a/easymessage/WebContent/pages/js/template/push_stats_template.html
+++ b/easymessage/WebContent/pages/js/template/push_stats_template.html
@@ -8,13 +8,7 @@
 </div>
 <!--breadcrumbs -->
 <div class="page-content">
-	<div class="page-header">
-		<h1>
-			월간 통계 <small> <i class="ace-icon fa fa-angle-double-right"></i>
-				월별 또는 일별로 발송 통계 확인
-			</small>
-		</h1>
-	</div>
+
 	<!-- /.page-header -->
 
 	<div class="row">
@@ -22,61 +16,64 @@
 			<div class="widget-box">
 				<div class="widget-header widget-header-flat">
 					<h4 class="widget-title">월간 통계</h4>
+
+					<!-- 							<div id="msg-list-send-status-div" class="form-group col-lg-12 col-sm-12 col-xs-12" -->
+					<!-- 							style="display: none;"> -->
+					<!-- 							<label class="col-lg-1 col-sm-3 col-xs-3">발송상태</label> -->
+					<!-- 							<div class="col-lg-11  col-sm-9 col-xs-9 input-group"> -->
 				</div>
 				<div class="widget-body">
 					<div class="widget-main">
-						<div class="form-group">
-							<label>검색 월 선택</label>
-							<div id="msg-stats-date-time-picker-div"
-								class="input-group col-lg-12">
-								<input id="msg-stats-month-date-input" type="text"
-									class="form-control" disabled="disabled"> <span
-									class="input-group-addon"> <i
-									class="fa fa-clock-o bigger-110"></i>
-								</span>
+						<div class="row">
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+								<label class="col-lg-1 col-sm-3 col-xs-3">월 선택</label>
+								<div id="msg-stats-date-time-picker-div"
+									class="input-group col-lg-11  col-sm-9 col-xs-9">
+									<input id="msg-stats-month-date-input" type="text"
+										class="form-control" disabled="disabled"> <span
+										class="input-group-addon"> <i
+										class="fa fa-clock-o bigger-110"></i>
+									</span>
+								</div>
 							</div>
-							<br>
-							<div class="clearfix"></div>
-							<br> <label>검색 시작 일 선택</label>
-							<div id="msg-stats-start-date-time-picker-div"
-								class="input-group col-lg-12">
-								<input id="msg-stats-start-date-input" type="text"
-									class="form-control" disabled="disabled"> <span
-									class="input-group-addon"> <i
-									class="fa fa-clock-o bigger-110"></i>
-								</span>
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+								<label class="col-lg-1 col-sm-3 col-xs-3">시작 일</label>
+								<div id="msg-stats-start-date-time-picker-div"
+									class="input-group col-lg-11  col-sm-9 col-xs-9">
+									<input id="msg-stats-start-date-input" type="text"
+										class="form-control" disabled="disabled"> <span
+										class="input-group-addon"> <i
+										class="fa fa-clock-o bigger-110"></i>
+									</span>
+								</div>
 							</div>
-							<div class="clearfix"></div>
-							<br> <label>검색 종료 일 선택</label>
-							<div id="msg-stats-end-date-time-picker-div"
-								class="input-group col-lg-12">
-								<input id="msg-stats-end-date-input" type="text"
-									class="form-control" disabled="disabled"> <span
-									class="input-group-addon"> <i
-									class="fa fa-clock-o bigger-110"></i>
-								</span>
+							<div class="form-group col-lg-12 col-sm-12 col-xs-12">
+								<label class="col-lg-1 col-sm-3 col-xs-3">종료 일</label>
+								<div id="msg-stats-end-date-time-picker-div"
+									class="input-group col-lg-11  col-sm-9 col-xs-9">
+									<input id="msg-stats-end-date-input" type="text"
+										class="form-control" disabled="disabled"> <span
+										class="input-group-addon"> <i
+										class="fa fa-clock-o bigger-110"></i>
+									</span>
+								</div>
+							</div>
+
+							<div class="form-group  col-lg-12 col-sm-12 col-xs-12">
+
+								<button class="btn btn-sm btn-info pull-right"
+									id="msg-stats-search-btn" type="button">
+									<i class="ace-icon fa fa-search bigger-110"></i> 검색
+								</button>
 							</div>
 
 						</div>
-						<div class="form-group">
-							<div class="clearfix"></div><br>
-							<button class="btn btn-info" id="msg-stats-search-btn"
-								type="button">
-								<i class="ace-icon fa fa-search bigger-110"></i> 검색
-							</button>
-						</div>
-
-
 						<div class="row" id="stats-div" style="display: none;">
 							<div class="col-lg-12">
-								<div class="clearfix">
-									<div class="pull-right tableTools-container"></div>
-								</div>
-								<div class="table-header">일반 메시지 </div>
 
-								<!-- div.table-responsive -->
+								<div class="table-header">일반 메시지</div>
 
-								<!-- div.dataTables_borderWrap -->
+
 
 								<table id="msg-stats-table"
 									class="table table-striped  table-hover" width="100%">
@@ -104,11 +101,9 @@
 								<div class="clearfix">
 									<div class="pull-right tableTools-container"></div>
 								</div>
-								<div class="table-header">예약 메시지 </div>
+								<div class="table-header">예약 메시지</div>
 
-								<!-- div.table-responsive -->
 
-								<!-- div.dataTables_borderWrap -->
 
 								<table id="msg-stats-reservation-table"
 									class="table table-striped  table-hover" width="100%">
