--- a/easymessage/WebContent/pages/js/template/push_stats_template.html
+++ b/easymessage/WebContent/pages/js/template/push_stats_template.html
@@ -71,7 +71,7 @@
 						<div class="row" id="stats-div" style="display: none;">
 							<div class="col-lg-12">
 
-								<div class="table-header">일반 메시지</div>
+								<!-- 	<div class="table-header">일반 메시지</div> -->
 
 
 
@@ -83,9 +83,10 @@
 											<th>발송됨</th>
 											<th>발송중</th>
 											<th>수신자 없음</th>
-											<th>발송 오류</th>
-											<th>수신 확인</th>
-											<th>메시지 확인</th>
+											<th>예약취소</th>
+											<th>발송오류</th>
+											<th>수신확인</th>
+											<th>메시지확인</th>
 										</tr>
 									</thead>
 
@@ -96,7 +97,7 @@
 
 							</div>
 						</div>
-						<div class="row" id="stats-reservation-div" style="display: none;">
+		<!-- 				<div class="row" id="stats-reservation-div" style="display: none;">
 							<div class="col-lg-12">
 								<div class="clearfix">
 									<div class="pull-right tableTools-container"></div>
@@ -126,7 +127,7 @@
 								</table>
 
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
