--- a/easymessage/WebContent/pages/js/template/push_msg_list_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_list_template.html
@@ -52,7 +52,8 @@
 							<div id="msg-list-start-date-time-picker-div"
 								class="input-group col-lg-11  col-sm-9 col-xs-9">
 								<input id="msg-list-start-date-input" type="text"
-									class="form-control" disabled="disabled"> <span
+									class="form-control" disabled="disabled">
+									<input type="hidden" id="defaultStartDate"> <span
 									class="input-group-addon"> <i
 									class="fa fa-clock-o bigger-110"></i>
 								</span>
@@ -271,23 +272,27 @@
 														</div>
 
 														<div class="form-group">
-															<i class="ace-icon fa fa-caret-right blue"></i> <label id="resend-fleet-label">fleet
-																번호</label><br> <span id="resend-fleet-span"
+															<i class="ace-icon fa fa-caret-right blue"></i> <label
+																id="resend-fleet-label">fleet 번호</label><br> <span
+																id="resend-fleet-span"
 																style="font-size: x-small; font-weight: bold;">(무전번호의
 																fleet번호를 입력해주세요!)</span> <input type="text"
 																class="form-control" id="resend-fleep-bunch-input"
-																maxlength="6">
+																maxlength="6" style="background-color: aliceblue"
+																placeholder="필수 입력">
 														</div>
 
 														<div class="form-group">
-															<i class="ace-icon fa fa-caret-right blue"></i> <label id="resend-private-label">개별
-																번호 </label><br> <span id="resend-private-span"
+															<i class="ace-icon fa fa-caret-right blue"></i> <label
+																id="resend-private-label">개별 번호 </label><br> <span
+																id="resend-private-span"
 																style="font-size: x-small; font-weight: bold;">(무전번호의
 																개별 ID를 입력해주세요!)</span>
 															<div class="input-group">
-																<input maxlength="6" type="text" class="form-control"
-																	id="resend-private-input" placeholder=""> <span
-																	style="cursor: pointer;" id="msg-resend-plus-span"
+																<input style="background-color: aliceblue" maxlength="6"
+																	type="text" class="form-control"
+																	id="resend-private-input" placeholder="필수 입력">
+																<span style="cursor: pointer;" id="msg-resend-plus-span"
 																	class="input-group-addon"><span
 																	class="glyphicon glyphicon-plus"></span> </span> <span
 																	style="cursor: pointer;" id="msg-resend-minus-span"
@@ -309,7 +314,7 @@
 															class="text-primary">내용</label>
 														<div class="form-group">
 															<textarea rows="9" class="form-control"
-																id="msg-resend-content-textarea" placeholder="내용 입력"></textarea>
+																id="msg-resend-content-textarea" placeholder="필수 입력"></textarea>
 															<p id="msg-resend-length-p">
 																<strong id="msg-resend-length-strong">0</strong>/<span
 																	id="msg-resend-length-max">140</span><span
@@ -317,40 +322,46 @@
 
 															</p>
 														</div>
-														<input type="hidden" id="resend-group-check">
+														<div id="resend-file" style="display: none;">
+															<i class="ace-icon fa fa-paperclip blue"></i><label
+																class="text-primary">첨부된 파일이 있습니다</label>
+															<div>
+																<input type="hidden" id="resend-file-format-hidden">
+																<input type="hidden" id="resend-file-name-hidden">
+															
+															</div>
+														</div>
+
+
 													</div>
+
 												</div>
 
 
 											</div>
+											<div class="modal-footer">
+												<button class="btn btn-sm" id="modal-footer-cancel"
+													data-dismiss="modal">
+													<i class="ace-icon fa fa-times"></i> 취소
+												</button>
 
+												<button id="msg-resend-btn" class="btn btn-sm btn-primary">
+													<i class="ace-icon fa fa-check"></i> 메시지 전송
+												</button>
+											</div>
 										</div>
-
-
-									</div>
-									<div class="modal-footer">
-										<button class="btn btn-sm" id="modal-footer-cancel"
-											data-dismiss="modal">
-											<i class="ace-icon fa fa-times"></i> 취소
-										</button>
-
-										<button id="msg-resend-btn" class="btn btn-sm btn-primary">
-											<i class="ace-icon fa fa-check"></i> 메시지 전송
-										</button>
 									</div>
 								</div>
+
 							</div>
 						</div>
+
 
 					</div>
 				</div>
 
-
+				<!--row-->
 			</div>
 		</div>
-
-		<!--row-->
 	</div>
-</div>
-</div>
-<!--page Content-->
+	<!--page Content-->
