--- a/easymessage/WebContent/pages/js/template/push_msg_send_template.html
+++ b/easymessage/WebContent/pages/js/template/push_msg_send_template.html
@@ -1,5 +1,6 @@
 
 
+
 <div class="breadcrumbs" id="breadcrumbs">
 	<ul class="breadcrumb">
 		<li><i class="ace-icon fa fa-home home-icon"></i> <a href="#">Home</a>
@@ -206,7 +207,7 @@
 									<div class="form-group">
 										<textarea rows="9" class="form-control"
 											id="msg-send-contact-private-content-textarea"
-											placeholder="내용 입력"></textarea>
+											placeholder="필수 입력"></textarea>
 										<p id="msg-send-contact-private-length-p">
 											<strong id="msg-send-contact-private-length-strong">0</strong>/<span
 												id="msg-send-contact-private-length-max">140</span><span
@@ -315,6 +316,7 @@
 												placeholder="옵션       반복 시간(분 단위)" disabled="disabled">
 										</div>
 									</div>
+
 									<div>
 										<i class="ace-icon fa fa-paperclip blue"></i>&nbsp; <label>파일
 											첨부</label>&nbsp; <i class="fa fa-exclamation-triangle red"
@@ -328,6 +330,11 @@
 										<input type="hidden" id="file-md5"> <input
 											type="hidden" id="file-thumbnail">
 
+									</div>
+									<div id="fileprogress" class="progress" style="display: none;">
+										<div class="progress-bar progress-bar-striped active"
+											role="progressbar" aria-valuenow="40" aria-valuemin="0"
+											aria-valuemax="100" style="width: 100%">파일 첨부중</div>
 									</div>
 									<br>
 									<div>
@@ -383,8 +390,10 @@
 											id="group-fleet-label">fleet 번호</label><br> <span
 											id="group-fleet-span"
 											style="font-size: x-small; font-weight: bold;">(무전번호의
-											fleet번호를 입력해주세요!)</span> <input type="text" class="form-control"
-											id="send-group-fleep-bunch-input" maxlength="6">
+											fleet번호를 입력해주세요!)</span> <input style="background-color: aliceblue"
+											type="text" class="form-control"
+											id="send-group-fleep-bunch-input" maxlength="6"
+											placeholder="필수 입력">
 									</div>
 
 									<div class="form-group">
@@ -394,10 +403,10 @@
 											style="font-size: x-small; font-weight: bold;">(무전번호의
 											개별 ID를 입력해주세요!)</span>
 										<div class="input-group">
-											<input maxlength="6" type="text" class="form-control"
-												id="send-group-input" placeholder=""> <span
-												style="cursor: pointer;" id="msg-send-group-plus-span"
-												class="input-group-addon"><span
+											<input maxlength="6" style="background-color: aliceblue"
+												type="text" class="form-control" id="send-group-input"
+												placeholder="필수 입력"> <span style="cursor: pointer;"
+												id="msg-send-group-plus-span" class="input-group-addon"><span
 												class="glyphicon glyphicon-plus"></span> </span> <span
 												style="cursor: pointer;" id="msg-send-group-minus-span"
 												class="input-group-addon"><span
@@ -417,7 +426,7 @@
 									<i class="ace-icon fa fa-caret-right blue"></i> <label>내용</label>
 									<div class="form-group">
 										<textarea rows="9" class="form-control"
-											id="msg-send-group-content-textarea" placeholder="내용 입력"></textarea>
+											id="msg-send-group-content-textarea" placeholder="필수 입력"></textarea>
 										<p id="msg-send-group-length-p">
 											<strong id="msg-send-group-length-strong">0</strong>/<span
 												id="msg-send-group-length-max">140</span><span
@@ -705,9 +714,7 @@
 													</div>
 													<div class="form-group">
 														<i class="ace-icon fa fa-caret-right blue"></i> <label>항목1
-														</label><br> <span
-															style="font-size: x-small; font-weight: bold;">(항목이
-															필요하면 등록해주세요!)</span> <input type="text" class="form-control"
+														</label><br> <input type="text" class="form-control"
 															id="contact-edit-user-item1-input" maxlength="10"></input>
 													</div>
 													<div class="form-group">
@@ -745,6 +752,28 @@
 						</div>
 					</div>
 
+				</div>
+
+				<div class="modal fade bs-example-modal-sm" id="myPleaseWait"
+					tabindex="-1" role="dialog" aria-hidden="true"
+					data-backdrop="static">
+					<div class="modal-dialog modal-sm">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h4 class="modal-title">
+									<span class="glyphicon glyphicon-time"> </span>파일 업로드중..
+								</h4>
+							</div>
+							<div class="modal-body">
+								<div class="progress">
+									<div
+										class="progress-bar progress-bar-info
+                    progress-bar-striped active"
+										style="width: 100%"></div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 				<!--  -->
 			</div>
